--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,9 +16,15 @@ concurrency:
   group: "pages"
   cancel-in-progress: true
 
+env:
+  GH_PACKAGE_USERNAME: '${{ secrets.GH_PACKAGE_USERNAME }}'
+  GH_PACKAGE_TOKEN: '${{ secrets.GH_PACKAGE_TOKEN }}'
+
 jobs:
   build_and_test:
     name: Build and test packages
+
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout the repository
@@ -60,12 +66,30 @@ jobs:
       run: |
         dotnet test -c Release --no-build --verbosity normal
 
-    - name: Publish artifact
+    - name: Publish artifact for theme
+      if: ${{ startsWith(github.ref, 'refs/tags/v') }}
+      shell: bash
+      run: |
+        mkdir -p ./published
+
+        pushd ./src
+        zip -r ../published/minimal-blog-v${{ steps.version.outputs.value }}.zip .
+        popd
+
+    - name: Upload artifact for theme
+      if: ${{ startsWith(github.ref, 'refs/tags/v') }}
+      uses: actions/upload-pages-artifact@v4
+      with:
+        path: ./published
+
+    - name: Publish artifact for preview
+      if: ${{ startsWith(github.ref, 'refs/tags/v') }}
       shell: bash
       run: |
         dotnet run --project ./preview/ScissorHands -- --build
 
-    - name: Upload artifact for web
+    - name: Upload artifact for preview
+      if: ${{ startsWith(github.ref, 'refs/tags/v') }}
       uses: actions/upload-pages-artifact@v4
       with:
         path: ./preview/ScissorHands/dist
@@ -99,12 +123,19 @@ jobs:
 
         "value=$version" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
 
+    - name: Download Artifact
+      uses: actions/download-artifact@v6
+      with:
+        name: artifacts
+        path: ./published
+
     - name: Create Release to GitHub
       uses: softprops/action-gh-release@v2
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         tag_name: "v${{ steps.version.outputs.value }}"
-        files: ./dist/*.*
+        files: |
+          ./published/*.zip
         generate_release_notes: true
 
     - name: Deploy to GitHub Pages
