--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -94,8 +94,8 @@ jobs:
       with:
         path: ./preview/ScissorHands/dist
 
-  publish:
-    name: Publish preview site
+  publish_and_deploy:
+    name: Publish artifacts and deploy to GitHub Pages
     if: ${{ startsWith(github.ref, 'refs/tags/v') }}
     needs:
     - build_and_test
