--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,9 +12,9 @@ on:
     branches:
     - main
 
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
+# concurrency:
+#   group: "pages"
+#   cancel-in-progress: true
 
 env:
   GH_PACKAGE_USERNAME: '${{ secrets.GH_PACKAGE_USERNAME }}'
