--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -78,8 +78,9 @@ jobs:
 
     - name: Upload artifact for theme
       if: ${{ startsWith(github.ref, 'refs/tags/v') }}
-      uses: actions/upload-pages-artifact@v4
+      uses: actions/upload-artifact@v6
       with:
+        name: artifact
         path: ./published
 
     - name: Publish artifact for preview
@@ -126,7 +127,7 @@ jobs:
     - name: Download Artifact
       uses: actions/download-artifact@v6
       with:
-        name: artifacts
+        name: artifact
         path: ./published
 
     - name: Create Release to GitHub
