--- a/preview/ScissorHands/appsettings.json
+++ b/preview/ScissorHands/appsettings.json
@@ -16,8 +16,16 @@
     "Output": "dist",
     "PreviewOutput": "preview",
     "BaseUrl": "/",
-    "IncludeDateInPostUrl": false
+    "IncludeDateInPostUrl": false,
+    "Debug": false
   },
 
-  "Plugins": []
+  "Plugins": [
+    {
+      "Name": "Google Analytics",
+      "Options": {
+        "MeasurementId": "G-XXXXXXXX"
+      }
+    }
+  ]
 }
