--- a/preview/ScissorHands/appsettings.json
+++ b/preview/ScissorHands/appsettings.json
@@ -10,12 +10,11 @@
   "Site": {
     "Title": "ScissorHands.NET &ndash; Minimal Blog",
     "Description": "A minimal blog using Tailwind CSS for ScissorHands.NET, inspired by [astro-minimal-blog](https://github.com/alexanderhodes/astro-minimal-blog).",
+    "Locale": "en-US",
     "Author": "ScissorHands Team",
     "Theme": "minimal-blog",
-    "ContentRoot": "contents",
-    "Output": "dist",
-    "PreviewOutput": "preview",
     "BaseUrl": "/",
+    "HeroImage": "/images/scissorhands-net.jpg",
     "IncludeDateInPostUrl": false,
     "Debug": false
   },
@@ -25,6 +24,13 @@
       "Name": "Google Analytics",
       "Options": {
         "MeasurementId": "G-XXXXXXXX"
+      }
+    },
+    {
+      "Name": "Open Graph",
+      "Options": {
+        "TwitterSiteId": "@getscissorhands",
+        "TwitterCreatorId": "@scissorhands_minimal_blog"
       }
     }
   ]
