--- a/preview/ScissorHands/ScissorHands.csproj
+++ b/preview/ScissorHands/ScissorHands.csproj
@@ -1,26 +1,14 @@
-﻿<!-- <Project Sdk="Microsoft.NET.Sdk"> -->
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <!-- <OutputType>Exe</OutputType> -->
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-
-    <GenerateDocumentationFile>false</GenerateDocumentationFile>
-    <EnableDefaultContentItems>false</EnableDefaultContentItems>
-
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="contents/**/*" CopyToOutputDirectory="PreserveNewest" />
-    <Content Include="themes/**/*" CopyToOutputDirectory="PreserveNewest" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="ScissorHands.Plugin.GoogleAnalytics" Version="1.*-*" />
+    <PackageReference Include="ScissorHands.Plugin.OpenGraph" Version="1.*-*" />
     <PackageReference Include="ScissorHands.Web" Version="1.*-*" />
   </ItemGroup>
 
