--- a/preview/ScissorHands/appsettings.json
+++ b/preview/ScissorHands/appsettings.json
@@ -8,7 +8,7 @@
   },
 
   "Site": {
-    "Title": "ScissorHands.NET &ndash; Minimal Blog",
+    "Title": "ScissorHands.NET - Minimal Blog",
     "Description": "A minimal blog using Tailwind CSS for ScissorHands.NET, inspired by [astro-minimal-blog](https://github.com/alexanderhodes/astro-minimal-blog).",
     "Locale": "en-US",
     "Author": "ScissorHands Team",
