--- a/preview/ScissorHands/appsettings.json
+++ b/preview/ScissorHands/appsettings.json
@@ -29,8 +29,7 @@
     {
       "Name": "Open Graph",
       "Options": {
-        "TwitterSiteId": "@getscissorhands",
-        "TwitterCreatorId": "@scissorhands_minimal_blog"
+        "TwitterSiteId": "@getscissorhands"
       }
     }
   ]
