Update view components

--- a/preview/ScissorHands/appsettings.json
+++ b/preview/ScissorHands/appsettings.json
@@ -15,7 +15,8 @@
     "Theme": "minimal-blog",
     "BaseUrl": "/",
     "HeroImage": "/images/scissorhands-net.jpg",
-    "IncludeDateInPostUrl": false,
+    "UseLocaleInUrl": false,
+    "UseDateInPostUrl": false,
     "Debug": false
   },
 
